--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <main>
         <div id="calculo">
-            <div id="conta">1+1</div>
+            <div id="conta"></div>
             <div id="aaa">
                 <div id="resultado-igual">=</div>
-                <div id="resultado">2</div>
+                <div id="resultado"></div>
             </div>
         </div>
 
