--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="botao operacao" id="adicao">+</div>
             <div class="botao" id="parenteses">( )</div>
             <div class="botao" id="numero-0">0</div>
-            <div class="botao" id="virgula">,</div>
+            <div class="botao" id="ponto">.</div>
             <div class="botao" id="igual">=</div>
         </div>
     </main>
